kubernetes/apps/vllm/service-aux.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-aux
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vllm-aux
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
