kubernetes/apps/vllm/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-main
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vllm-main
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
